# ChangeLog for app-arch/TheUnarchiver
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/TheUnarchiver/ChangeLog,v 1.1 2011/10/08 18:12:47 hanno Exp $

*TheUnarchiver-2.7.1 (08 Oct 2011)

  08 Oct 2011; Hanno Boeck <hanno@gentoo.org> +TheUnarchiver-2.7.1.ebuild,
  +metadata.xml:
  Initial commit, unpacker for various archiving formats including rar v3.
