@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/TheUnarchiver
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/TheUnarchiver/ChangeLog,v 1.1 2011/10/08 18:12:47 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/TheUnarchiver/ChangeLog,v 1.2 2011/10/09 07:40:06 hanno Exp $
+
+  09 Oct 2011; Hanno Boeck <hanno@gentoo.org> TheUnarchiver-2.7.1.ebuild:
+  Raise dependency for gnustep-make, versions before 2.6.0 use incompatible
+  paths.
 
 *TheUnarchiver-2.7.1 (08 Oct 2011)
 
